[gd_scene load_steps=6 format=3 uid="uid://c84q1bhurmaje"]

[ext_resource type="Script" path="res://DialogueSystem/dialogue_node_scene.gd" id="1_hptkn"]
[ext_resource type="Texture2D" uid="uid://e5xgwcg17m8y" path="res://DialogueSystem/NodeEmpty.png" id="2_txslj"]
[ext_resource type="Texture2D" uid="uid://p3n83iyfep58" path="res://DialogueSystem/NodeBlue.png" id="3_o47rx"]
[ext_resource type="Texture2D" uid="uid://bjpbq4g8mb34l" path="res://DialogueSystem/NodeRed.png" id="4_olwk1"]

[sub_resource type="LabelSettings" id="LabelSettings_mb4fu"]
outline_color = Color(0.607843, 0.607843, 0.607843, 1)
shadow_color = Color(0, 0, 0, 1)

[node name="DialogueNode" type="Node2D"]
script = ExtResource("1_hptkn")
possibleImages = Array[NodePath]([NodePath("NodeEmpty"), NodePath("NodeBlue"), NodePath("NodeRed")])

[node name="NodeEmpty" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.215686)
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_txslj")

[node name="NodeBlue" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_o47rx")

[node name="NodeRed" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_olwk1")

[node name="txt_NodeName" type="Label" parent="."]
offset_right = 283.0
offset_bottom = 23.0
label_settings = SubResource("LabelSettings_mb4fu")
uppercase = true

[node name="Txt_Main" type="Label" parent="."]
offset_top = 32.0
offset_right = 321.0
offset_bottom = 162.0
autowrap_mode = 2

[connection signal="mouse_entered" from="NodeEmpty" to="." method="_on_node_empty_mouse_entered"]
[connection signal="mouse_exited" from="NodeEmpty" to="." method="_on_node_empty_mouse_exited"]
